# solana-skeleton-program

./: Cargo.toml  README  README.md
src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
tests/: tests.rs
