[package]
name = "skeleton"
version = "1.0.0"
description = "simple project"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
bincode = "1.3.3"
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.1"
solana-program = "1.18.0"
thiserror = "1.0.52"
tokio = "1.29.1"

[dev-dependencies]
serial_test = "3.0.0"
solana-cli-config = "1.18.0"
solana-logger = "1.18.0"
solana-rpc-client = "1.18.0"
solana-sdk = "1.18.0"
solana-test-validator = "1.18.0"
spl-token-client = "0.8"
tempfile = "3.10.1"
test-case = "3.3"

[lib]
crate-type = ["cdylib", "lib"]
