[package]
name = "skeleton"
version = "1.0.0"
description = "simple project"
authors = ["hanako mumei"]
repository = "https://github.com/2501babe/solana-skeleton-program"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
solana-program = "1.18.0"

[dev-dependencies]
serial_test = "3.0.0"
solana-cli-config = "1.18.0"
solana-logger = "1.18.0"
solana-rpc-client = "1.18.0"
solana-sdk = "1.18.0"
solana-test-validator = "1.18.0"
spl-token-client = "0.8"
tempfile = "3.10.1"
test-case = "3.3"
tokio = "1.29.1"

[lib]
crate-type = ["cdylib", "lib"]
