[package]
name = "skeleton"
version = "1.0.0"
description = "simple project"
authors = ["hanako mumei"]
repository = "https://github.com/2501babe/solana-skeleton-program"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { version = "*", features = ["derive", "unstable__schema"] }
solana-program = "2.0.4"

[dev-dependencies]
serial_test = "*"
solana-cli-config = "2.0.4"
solana-logger = "2.0.4"
solana-client = "2.0.4"
solana-transaction-status = "2.0.4"
solana-rpc-client = "2.0.4"
solana-sdk = "2.0.4"
solana-test-validator = "2.0.4"
tempfile = "*"
test-case = "*"
tokio = "*"

[lib]
crate-type = ["cdylib", "lib"]
